pytorch lecture notes commit

--- a/lecture-notes/pytorch-base/06_迁移学习训练方法.ipynb
+++ b/lecture-notes/pytorch-base/06_迁移学习训练方法.ipynb
@@ -127,15 +127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Loading data from ../data/raw/dogscats/sample/train.\n",
-      "Loading data from ../data/raw/dogscats/sample/valid.\n"
+     "name": "stdout",
+     "text": "Loading data from ../../data/raw/dogscats/sample/train.\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "AssertionError",
+     "evalue": "'sample/train' is not valid.",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-7cd10aa26728>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDogsCatsDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../data/raw\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"sample/train\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_trans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mval_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDogsCatsDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../data/raw\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"sample/valid\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mval_trans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mn_classes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/DarrenZhang/PyTorch-Seg/lecture-notes/pytorch-base/my_datasets.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, root, suffix, transform, target_transform, loader, download)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dogscats\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msuffix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Loading data from {path}.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"'{suffix}' is not valid.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_transform\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: 'sample/train' is not valid."
      ]
     }
    ],
@@ -252,7 +261,7 @@
    "source": [
     "from torchvision import models\n",
     "\n",
-    "model = models.resnet18(pretrained=False)#True, 下载预训练权重"
+    "model = models.resnet18(pretrained=False)  # True, 下载预训练权重"
    ]
   },
   {
@@ -495,7 +504,7 @@
    "outputs": [],
    "source": [
     "def get_model(n_classes=2):\n",
-    "    model = models.resnet18(pretrained=False)\n",
+    "    model = models.resnet18(pretrained=True)\n",
     "    for param in model.parameters():\n",
     "        param.requires_grad = False\n",
     "    model.fc = nn.Linear(512, n_classes)\n",
@@ -605,7 +614,7 @@
     "    \n",
     "    \n",
     "    # Eval\n",
-    "    model.eval()#重要！（dropout关闭）\n",
+    "    model.eval()  # 重要！（dropout关闭）\n",
     "    \n",
     "    total_loss, n_correct, n_samples = 0.0, 0, 0\n",
     "    with torch.no_grad():\n",
