--- a/lecture-notes/week2-b.ipynb
+++ b/lecture-notes/week2-b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = 'cuda:0'\n",
     "def test_hyperparameters(BATCH_SIZE=16, IMG_SIZE=256, device=device):\n",
     "    train_dl, val_dl = prepare_trainset(BATCH_SIZE=BATCH_SIZE, \n",
     "                                        NUM_WORKERS=8, \n",
     "                                        SEED=2019, \n",
     "                                        IMG_SIZE=IMG_SIZE, debug=True)\n",
     "\n",
-    "    for i, (images, masks) in enumerate(train_dl):#一次读取一个Bath\n",
+    "    for i, (images, masks) in enumerate(train_dl):  # 一次读取一个Bath\n",
     "        images = images.to(device=device, dtype=torch.float)\n",
     "        masks = masks.to(device=device, dtype=torch.float)\n",
     "        if i==0:\n",
@@ -59,27 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Count of trainset (for training):  900\n",
-      "Count of validset (for training):  200\n",
-      "Pass\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bigdata/data/endi/anaconda3/lib/python3.7/site-packages/torch/nn/functional.py:1386: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
-      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
-      "/home/bigdata/data/endi/anaconda3/lib/python3.7/site-packages/torch/nn/functional.py:2457: UserWarning: nn.functional.upsample is deprecated. Use nn.functional.interpolate instead.\n",
-      "  warnings.warn(\"nn.functional.upsample is deprecated. Use nn.functional.interpolate instead.\")\n"
-     ]
+     "text": "Count of trainset (for training):  900\nCount of validset (for training):  200\ntorch.Size([8, 1, 256, 256]) torch.Size([8, 1, 256, 256])\nPass\n"
     }
    ],
    "source": [
@@ -271,9 +258,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.2 64-bit ('darrenzhang': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python36264bitdarrenzhangconda357a0db39b27441d9c70d07f3f243191"
   },
   "language_info": {
    "codemirror_mode": {
@@ -285,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.2-final"
   }
  },
  "nbformat": 4,
