--- a/lecture-notes/week3.ipynb
+++ b/lecture-notes/week3.ipynb
@@ -205,9 +205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.2 64-bit ('darrenzhang': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python36264bitdarrenzhangconda357a0db39b27441d9c70d07f3f243191"
   },
   "language_info": {
    "codemirror_mode": {
@@ -219,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.2-final"
   }
  },
  "nbformat": 4,
