--- a/pytorch-base/05_处理数据.ipynb
+++ b/pytorch-base/05_处理数据.ipynb
@@ -698,9 +698,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.2 64-bit ('darrenzhang': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python36264bitdarrenzhangconda357a0db39b27441d9c70d07f3f243191"
   },
   "language_info": {
    "codemirror_mode": {
@@ -712,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2-final"
   }
  },
  "nbformat": 4,
